# MySubredditsBot

./: .gitignore  LICENSE  README.md  bot.py  credentials.py  lint_all.sh  media_handler.py  pyproject.toml  reddit_adapter.py  requirements.txt  subscriptions_manager.py  telegram_adapter.py  twitter_adapter.py  workers.py
tests/: test_media_handler.py  test_reddit_adapter.py
