[tool.poetry]
name = "mysubredditsbot"
version = "0.1.0"
description = ""
authors = ["Recursing <buonanno.lorenzo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.18"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
bandit = "^1.7"
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.931"
pylint = "^2.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
