[tool.poetry]
name = "mysubredditsbot"
version = "0.1.0"
description = ""
authors = ["Recursing <buonanno.lorenzo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.18"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
bandit = "^1.7"
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.931"
pylint = "^2.12"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "strict"